; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_create.c_test_refs_branches_create__can_force_create_over_an_existing_branch.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_create.c_test_refs_branches_create__can_force_create_over_an_existing_branch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@target = common dso_local global i32 0, align 4
@repo = common dso_local global i32 0, align 4
@branch = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"br2\00", align 1
@.str.1 = private unnamed_addr constant [15 x i8] c"refs/heads/br2\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_branches_create__can_force_create_over_an_existing_branch() #0 {
  %1 = load i32, i32* @repo, align 4
  %2 = call i32 @retrieve_known_commit(i32* @target, i32 %1)
  %3 = load i32, i32* @repo, align 4
  %4 = load i32, i32* @target, align 4
  %5 = call i32 @git_branch_create(i32* @branch, i32 %3, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 %4, i32 1)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = load i32, i32* @branch, align 4
  %8 = call i32 @git_reference_target(i32 %7)
  %9 = load i32, i32* @target, align 4
  %10 = call i32 @git_commit_id(i32 %9)
  %11 = call i32 @git_oid_cmp(i32 %8, i32 %10)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = load i32, i32* @branch, align 4
  %14 = call i32 @git_reference_name(i32 %13)
  %15 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %14)
  ret void
}

declare dso_local i32 @retrieve_known_commit(i32*, i32) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_branch_create(i32*, i32, i8*, i32, i32) #1

declare dso_local i32 @git_oid_cmp(i32, i32) #1

declare dso_local i32 @git_reference_target(i32) #1

declare dso_local i32 @git_commit_id(i32) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_reference_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
